--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 		<div class="container">
 			<h1><a href="index.html">OSIS SKANSA</a></h1>
 			<ul>
-				<li><a href="index.html">HOME</a></li>
+				<li class="active"><a href="index.html">HOME</a></li>
 				<li><a href="informasi.html">INFORMASI</a></li>
-				<li class="active"><a href="kegiatan.html">KEGIATAN</a></li>
+				<li><a href="kegiatan.html">KEGIATAN</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
 		</div>
@@ -45,7 +45,7 @@
 	<section class="informasi">
 		<div class="container">
 			<h3>ABOUT</h3>
-			<p>web ini adalah web resmi yang dimiliki oleh Osis SMKN 1 Pengasih yang dikelola langsung oleh anggota osis. Organisasi Siswa Intra Sekolah (disingkat OSIS) adalah suatu organisasi yang berada di tingkat sekolah di Indonesia yang dimulai dari Sekolah Menengah yaitu Sekolah Menengah Pertama (SMP) dan Sekolah Menengah Atas (SMA/SMK). OSIS diurus dan dikelola oleh murid-murid yang terpilih untuk menjadi pengurus OSIS, dan dibimbing oleh beberapa pembina dari guru.</p>
+			<p align="justify">web ini adalah web resmi yang dimiliki oleh Osis SMKN 1 Pengasih yang dikelola langsung oleh anggota osis. Organisasi Siswa Intra Sekolah (disingkat OSIS) adalah suatu organisasi yang berada di tingkat sekolah di Indonesia yang dimulai dari Sekolah Menengah yaitu Sekolah Menengah Pertama (SMP) dan Sekolah Menengah Atas (SMA/SMK). OSIS diurus dan dikelola oleh murid-murid yang terpilih untuk menjadi pengurus OSIS, dan dibimbing oleh beberapa pembina dari guru.</p>
 		</div>
 	</section>
 
